# qa_quru_python_4_18

./: .gitignore
api_hw/: pyproject.toml
api_hw/schemas/: reqresin.py
api_hw/tests/: test_api.py
